--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
 </body>
 <script>
     if ('serviceWorker' in navigator) {
-      navigator.serviceWorker.register('/sw.js');
+      navigator.serviceWorker.register('sw.js');
     }
   </script>
 
